// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`密集模式 1`] = `
Array [
  <div
    className="sinoui-base-input "
    data-testid="baseInput"
    onClick={[Function]}
  >
    <input
      className="sinoui-base-input__input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    />
    <div
      className="sinoui-input__overlay"
    />
  </div>,
  <div
    className="sinoui-base-input "
    data-testid="baseInput"
    onClick={[Function]}
  >
    <input
      className="sinoui-base-input__input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    />
    <div
      className="sinoui-input__overlay"
    />
  </div>,
]
`;

exports[`无标签 1`] = `
<div
  className="sinoui-base-input "
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    className="sinoui-base-input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
  <div
    className="sinoui-input__overlay"
  />
</div>
`;

exports[`正确渲染填充模式的input 1`] = `[Function]`;

exports[`渲染不可用状态下的填充模式的Input 1`] = `[Function]`;

exports[`渲染错误状态下填充模式的Input 1`] = `[Function]`;

exports[`聚焦状态 1`] = `
<div
  className="sinoui-base-input "
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    className="sinoui-base-input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
  <div
    className="sinoui-input__overlay"
  />
</div>
`;
